<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_topRated">Top Rated</string>
    <string name="action_popular">Popular</string>
    <string name="action_favorites">Favorites</string>
    <string name="author_label" translatable="false">Author: </string>
    <string name="author">John Doe</string>
    <string name="review_label">Review: </string>
    <string name="reviews">Movie Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="toast_add_favorites">Added to Favorites</string>
    <string name="toast_remove_favorites">Removed from Favorites</string>
    <string name="test_movie_overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.</string>
    <string name="test_movie_release_date">2019</string>
    <string name="test_movie_title">Very biiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiig MovieTitle</string>
    <string name="test_movie_rating">7.25</string>
</resources>
