<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.view.ui.HomeActivity">
    <item
        android:id="@+id/action_popular"
        android:orderInCategory="1"
        android:title="@string/action_popular"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_topRated"
        android:orderInCategory="2"
        android:title="@string/action_topRated"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="3"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="4"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

</menu>


